[package]
name = "zeroconf-tokio"
version = "0.1.0"
authors = ["Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2021"
description = "zeroconf-tokio is a Tokio-based wrapper around the zeroconf crate, which provides mDNS service discovery and registration capabilities."
repository = "https://github.com/windy1/zeroconf-tokio"
keywords = ["zeroconf", "mdns", "avahi", "bonjour", "dnssd", "tokio"]
categories = ["asynchronous", "network-programming"]
license-file = "../LICENSE"
readme = "../README.md"

[dependencies]
log = "0.4.22"
tokio = { version = "1.39.1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7.11"
zeroconf = "0.15.0"

[dev-dependencies]
ntest = "0.9.3"
