[package]
name = "register-and-discover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
zeroconf-tokio = { path = "../../zeroconf-tokio" }
